# cmdweaver

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py
.agents/rules/: base.md
.github/workflows/: ci.yml
cmdweaver/: basic_types.py  command.py  exceptions.py  filters.py  interpreter.py  parser.py
cmdweaver/readlinecli/: readlinecli.py
docs/: pytest-migration-plan.md  renaming-plan.md
examples/: ifaces_config.py
spec/: autocomplete_spec.py  basic_types_spec.py  command_spec.py  context_spec.py  filters_spec.py  help_spec.py  interpreter_filters_spec.py  interpreter_spec.py
tests/: conftest.py
tests/unit/: test_autocomplete.py  test_basic_types.py  test_command.py  test_context.py  test_filters.py  test_help.py  test_interpreter.py  test_interpreter_filters.py
