[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmdweaver"
version = "0.9.3"
description = "Extensible command line processor for \"ad hoc\" shells creation"
readme = "README.md"
license = { text = "MIT" }
authors = [
    {name = "Eduardo Ferro Aldama", email = "eduardo.ferro.aldama@gmail.com"}
]
maintainers = [
    {name = "Eduardo Ferro Aldama", email = "eduardo.ferro.aldama@gmail.com"}
]
keywords = ["cli", "command-line", "shell", "parser", "completion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Topic :: Software Development :: User Interfaces",
]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/eferro/cmdweaver"
Repository = "https://github.com/eferro/cmdweaver"
Issues = "https://github.com/eferro/cmdweaver/issues"
Changelog = "https://github.com/eferro/cmdweaver/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["cmdweaver"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.setuptools]
packages = ["cmdweaver"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.exclude-package-data]
"*" = ["examples/*", "tests/*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["cmdweaver"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["doublex.*", "hamcrest.*"]
ignore_missing_imports = true
